Regression: Accessible window-activate events missing for some Gtk+ apps in GNOME 3.34 if Xorg is used
Steps to reproduce:
- Launch the attached accessible-event listener in a terminal
- In another terminal OR using gnome-shell's run dialog, repeatedly launch gtk3-demo or gedit
Expected results: Every time gtk3-demo or gedit was launched, a window:activate event for that newly-launched application would be printed out by the listener.
Actual results: Nearly every time gtk3-demo or gedit is launched, there is no window:activate event for that newly-launched application.
Impact: Orca doesn't present the new window because it has not be told it's appeared.
Notes:
- Things work as expected if Wayland is used; the problem seems to be limited to Xorg.
- Things work as expected in GNOME 3.32, even with Xorg.
- Not all apps have this problem. While gtk3-demo and gedit do, gnome-terminal and gnome-calculator do not.
- Please perform the test repeatedly if you do not initially see it. Occasionally I do get the expected events, even in Xorg. But at least nine times out of ten, they are missing.