adaptor: Fix missing events at startup

We need to register the application before anything else happens,
otherwise we might miss some events sent before registration.

As we want to register only from the main loop to avoid registering
an application that won't respond to calls [1], we used an idle
callback; but it doesn't run early enough in all cases, e.g. in
Firefox.  So, switch to a high-priority 0-timeout so that it should be
dispatched among the first ones in the next main loop iteration, then
being run before other callbacks that might generate events.

Fixes https://gitlab.gnome.org/GNOME/gtk/issues/2186

[1] https://gitlab.gnome.org/GNOME/at-spi2-core/issues/16